# Aplikasi_Inventaris_Perkantoran

./: README.md  main.py  pyproject.toml
.qtcreator/: .gitignore.txt
config/: db_config.py
database/: connection.py  dbvisual3_2310010148.sql
models/: barang_keluar_model.py  barang_masuk_model.py  barang_model.py  instansi_model.py  user_model.py
ui/: barang_form.ui  barang_keluar_form.ui  barang_masuk_form.ui  instansi_form.ui  login.ui  mainwindow.ui  ui_barang_form.py  ui_barang_keluar_form.py  ui_barang_masuk_form.py  ui_instansi_form.py  ui_login.py  ui_mainwindow.py
views/: barang_form.py  barang_keluar_form.py  barang_masuk_form.py  instansi_form.py  login.py  mainwindow.py
